# MethaneExternals

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CMakeExtraModules/: CodeCoverage.cmake
D3DCompilerToDXC/: CMakeLists.txt  README.txt  d3dcomp.cpp
DirectXCompiler/: CMakeLists.txt
DirectXCompiler/binaries/: .gitignore  Version.txt
DirectXLibs/D3DX12/: d3dx12.h
OpenImageIO/: CMakeLists.txt
PerlinNoise/Sources/: sdnoise1234.c  simplexnoise1234.cpp
SPIRV/: CMakeLists.txt
